# template-python

./: .coveragerc  .gitignore  .gitlint  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .sonar.properties  .travis.yml  Pipfile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  sonar-project.propoerties
.devcontainer/: devcontainer.json
modules/: dummy.py
test/: test_dummy.py
test/bdd/: test_dummy_feature.py
test/bdd/features/: dummy.feature
