[tool.poetry]
name = "template-python"
version = "0.1.0"
description = ""
authors = ["Gearoid O'Treasaigh <gearoid.otreasaigh@ibm.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
0html = "^0.0.0"
black = "^22.1.0"
detect-secrets = "1.0.3"
flake8 = "^4.0.1"
gitlint = "^0.17.0"
GitPython = "^3.1.27"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "^2.17.0"
pytest = "^6.2.5"
pytest-bdd = "^5.0.0"
pytest-cov = "^3.0.0"
pytest-describe-it = "^0.1.0"
pytest-mock = "^3.7.0"
pytest-pspec = "^0.0.4"
pytest-watch = "^4.2.0"
taskipy = "^1.9.0"
toml-sort = "^0.19.0"

[tool.taskipy.tasks]
"detect-secrets-audit" = "detect-secrets audit .secrets.baseline"
"detect-secrets-update" = "git diff --staged --name-only -z | xargs -0 detect-secrets scan --baseline .secrets.baseline"
"init" = "pre-commit install --install-hooks -t commit-msg -t pre-push -t pre-commit"
"test:security" = "docker run --rm --env SNYK_TOKEN=$SNYK_TOKEN -v $(pwd):/app snyk/snyk:python snyk test --dev"
"test:security:local" = ". .env && docker run --rm --env SNYK_TOKEN=$SNYK_TOKEN -v $(pwd):/app snyk/snyk:python snyk test --dev"
"test:watch" = "ptw test/ -- --cov-report term-missing --cov='modules'"
"test" = "pytest --cov=./modules test/  --cov-report=xml --cov-report=term-missing --cov-fail-under=100 --junitxml=.pytest_cache/pytest-report.xml --verbose --verbosity=9 --cache-clear --rootdir='.' && sed -i \"s#$(pwd)#.#g\" coverage.xml"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
